# copilot-agents-dojo

./: README.md  skills.md
.github/: copilot-instructions.md
agents/: architect.md  technical-program-manager.md
cli/: README.md  install.ps1  install.sh  pyproject.toml
cli/dojo_cli/: __init__.py  __main__.py  app.py  generator.py  marketplace.py  profiles.py  scanner.py
control-plane/: .env.example  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
docs/: memory-mcp.md
docs/superpowers/plans/: 2026-05-11-dojo-control-plane.md
docs/superpowers/specs/: 2026-05-11-dojo-control-plane-design.md
memory/: .link-graph.json  INDEX.md  README.md
memory/.obsidian/: app.json  appearance.json  graph.json  workspace.json
memory/decisions/: 2026-04-12-postgres-over-dynamodb.md  2026-04-15-test-isolation-docker.md  _template.md
memory/patterns/: _template.md  no-premature-abstraction.md  test-edge-cases-first.md  validate-api-responses.md
memory/preferences/: _template.md  descriptive-names.md  structured-logging.md
memory/sessions/: 2026-04-08-api-refactor.md  2026-04-10-auth-module.md  2026-04-14-notification-service.md  _template.md
scripts/: generate-architecture-diagram.py  generate-screenshots.py  link-index.sh  memory-query.sh  obsidian-sync.sh
skills/requirements-elicitation/: SKILL.md
skills/self-improvement/: SKILL.md
skills/using-superpowers/: SKILL.md
